rover_cerebro/log/build_2023-07-18_21-26-51/rover_gui/stderr.log
  File "/home/lolineko/ROS2/rover_cerebro/install/rover_gui/lib/python3.8/site-packages/rover_gui/RoverGUI.py", line 195
    for x in range(10)
                     ^
SyntaxError: invalid syntax

